@@ -7,6 +7,7 @@ kiten (4:4.8.4-0r1) UNRELEASED; urgency=low
   * Bump Standards-Version to 3.9.3, no changes required.
   * Add watch file.
   * Convert copyright to copyright-format v1.0 and update.
+  * Refresh patch enable_debianabimanager.diff.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 16 Jun 2012 12:20:40 +0200
 
